--- a/app/static/css/forms.css
+++ b/app/static/css/forms.css
@@ -1,24 +1,26 @@
-.send-form {
+:default input[type='text']{
+    color:red;
+}
+
+.form {
     width: 350px;
     float:right;
     margin:20px;
 }
 
-.send-form h2 {
+.form h2 {
     margin-bottom:10px;
 }
-
-.send-form p {
-    display: block;
-
+.form p{
+    display:block;
 }
 
-.send-form input {
+.form input {
     float:right;
     clear:both;
 }
 
-.send-form form input[type='text'] {
+.form form input[type='text'] {
     font-size: 12px;
     background: #fff;
     font-family:'Panton-Regular';
@@ -28,12 +30,39 @@
     border: 1px solid #ebeae5;
     margin-left: 0px;
     float:left;
+    margin-bottom:10px;
 }
+
+.form textarea {
+    font-size: 12px;
+    background: #fff;
+    font-family:'Panton-Regular';
+    /*padding: 10px 10px 10px 10px; */
+    padding: 10px;
+    width: 300px; /*is it wrong way? yes it is!!! */
+    border: 1px solid #ebeae5;
+    margin-left: 0px;
+    float:left;
+    margin-bottom:10px;
+}
+    
 /*is it wrong way??? */
-.send-form label {
+.form label {
     float:right;
     margin-bottom:20px;
 }
+
+#find.form form input {
+    margin:10px;
+}
+
+#find.form form input {
+    margin:10px;
+}
+
+
+
+
 
 /*form {
     display:block;
@@ -56,3 +85,16 @@ textarea {
     background:url(images/textarea-bg.jpg) right no-repeat #efefef;
 } */
 
+
+
+
+
+.field {
+    clear:both;
+    text-align:right;
+    margin:20px;
+}
+
+.field label {
+    clear:both;
+}
