--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -479,15 +479,23 @@ p {
 }
 
 .rules {
-    width: 400px;
+    text-decoration: none;
+    width: 500px;
     float:left;
     margin:20px;
 }
 
-.rules p{
-    font-size: 20px;
-    line-height:30px;
+.rules h1 {
+    margin-top:10px;
+    margin-left:25px;
+}
+
+.rules ul li {
+    background:url('/static/images/arrow_mini.png') no-repeat;
+    padding-left: 15px;
+    display:block;
     text-align:justify;
+    font-family:'Panton-Regular';
 }
 
 .articles {
@@ -500,6 +508,50 @@ p {
 }
 .articles a {
     cursor: pointer;
+}
+
+.article-read {
+    width: 90%;
+    margin:auto;
+    overflow:hidden;
+    text-align:center;
+}
+
+.service {
+    margin-top: 50px;
+    margin-right: 1px;
+    clear:both;
+}
+.service h2 {
+    text-align:center;
+}
+
+.service ul li {
+    background: url('../images/next1.png') no-repeat;
+    padding-left: 20px;
+    display:block;
+    font-family:'Panton-Regular';
+}
+
+.service img {
+    padding-right: 10px;
+    width: 12px;
+    opacity: 0.5;
+}
+
+.create-block {
+    margin-top:20px;
+    clear:both;
+}
+
+.get-article {
+    display:inline-block;
+    margin-left:50px;
+    margin-top:20px;
+}
+.article-range {
+    margin-right:70px;
+    margin-top:20px;
 }
 
 /*==========footer==========*/
@@ -627,76 +679,5 @@ transform:rotate(360deg);}
 .bw:hover {
   -webkit-filter: brightness(100%);
   filter: brightness(100%);
-}
-
-
-
-.rules {
-    margin-left: 40px;
-    margin-top: 45px;
-    text-decoration: none;
-}
-
-.rules a:hover {
-    padding: 2px;
-}
-
-.rules .rule1 {
-    float: left;
-    width: 200px;
-    border-right: 1px solid #eee;
-    padding-right: 15px;
-}
-
-.rules ul li {
-    background:url('/static/images/arrow_mini.png') no-repeat;
-    padding-left: 15px;
-    display:block;
-}
-
-.rules .rule2 {
-    float: right;
-    width: 200px;
-    padding-left: 30px;
-}
-
-.rules a {
-    text-decoration: none;
-    color: #888;
-}
-
-.rules {
-    float: left;
-}
-
-/*==========service==========*/
-.service {
-    margin-top: 50px;
-    margin-right: 1px;
-    clear:both;
-}
-.service h2 {
-    text-align:center;
-}
-
-.service ul li {
-    background: url('../images/next1.png') no-repeat;
-    padding-left: 20px;
-    display:block;
-    font-family:'Panton-Regular';
-}
-
-.service img {
-    padding-right: 10px;
-    width: 12px;
-    opacity: 0.5;
-}
-
-
-.article-read {
-    width: 90%;
-    margin:auto;
-    overflow:hidden;
-    text-align:center;
 }
 
