--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,10 +19,9 @@
   <link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='images/apple-touch-icon-72x72.png') }}">
   <link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='images/apple-touch-icon-114x114.png') }}">
 <!-- ?????????????????????? -->
-  <script type="text/javascript" src="http://scriptjava.net/source/scriptjava/scriptjava.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   <script src="{{ url_for('static', filename='javascript/backlightLink.js') }}"></script>
-  <script src="{{ url_for('static', filename='javascript/test.js') }}"></script>
+  <script src="{{ url_for('static', filename='javascript/tiny_scripts.js') }}"></script>
 </head>
 <body>
   {% if current_user.is_authenticated %}
