--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,7 +43,7 @@
         <p>Прочитайте статьи, которые написали соотечественники. Это интересно</p>
       </div>
       <div class="feature">
-        <img src="/static/images/contacts.svg" alt="contacts"></img>
+        <img src="/static/images/contact.svg" alt="contacts"></img>
         <h3>Наши контакты</h3>
         <p>У вас есть вопросы? <br>Пишите нам и мы с радостью Вам ответим</p>
       </div>
