--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,11 +2,12 @@
 {% block content %}
     <div class="login">
       <form action="login" method="post">
-      <p>Login:</p>
-      <input type="text" name="login">
-      <p>Password:</p>
-      <input type="password" name="password">
-      <input type="submit" value="Send">
+          <p>Login:</p>
+        <input type="text" name="login">
+          <p>Password:</p>
+        <input type="password" name="password">
+        <input type="submit" value="Send" class="btn red">
+      </form>
     </div>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
