del <p> from get_file

--- a/app/templates/get_file.html
+++ b/app/templates/get_file.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="block">  
   <div class="get-article">
-    <p><span style="font-family:'Panton-Bold'; font-size:15px;">Автор</span> - <p>{{author_name}}</p>
+    <p><span style="font-family:'Panton-Bold'; font-size:15px;">Автор</span> - {{author_name}}</p>
     <p><span style="font-family:'Panton-Bold'; font-size:15px;">Статья</span> - {{article_name}}</p>
     <p><span style="font-family:'Panton-Bold'; font-size:15px;">Дата добавления</span> - {{date}}</p>
     <p style="color:{{g.status[status][1]}}"><span style="font-family:'Panton-Bold'; font-size:15px; color:#000000">Статус</span> - {{g.status[status][0]}}</p>
