--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -6,26 +6,19 @@
 <a id="myLink" title="Click to do something"
  href="test1.html" onclick="showMessage({{records}});">link text</a>
 
-<div class="field">
-   <label for="n">Имя</label><br>
-   <input type="text" class="n" value="Name"/>
-</div>
-<div class="field">
-   <label for="ln">Фамилия</label><br>
-   <input type="text" class="ln" value="Sername"/>
-</div>
-<div class="field">
-   <label for="a">Место жительства</label><br>
-   <input type="text" class="a" value="valu" id="bla" onclick="cleanForm(this, 'value')"/>
-</div>
-<div>
-    <input type="button" value="0" id="button1" onclick="counter(this.id)">
-</div>
 
-
-<input type="input" value="Ваш email" onfocus="if (this.value) {this.value=''}" onBlur="if (this.value == '') {this.value='Ваш email'}">
-
-
+      <form action="test.html" method="POST" id="formx">
+        <p>Ваше Имя</p>
+          <input name="name" type="text">
+        <p>Электронная почта:</p>
+          <input name="email" type="text">
+          <input type="hidden" name="art_id" value="{{id}}">
+        <p>Комментарий:</p>
+          <textarea cols="10" rows="10" name="comment"></textarea>
+        <p>Оцените статью по 10-бальной шкале:</p>
+          <input type="button" value="0" name="counter" id="counter" onclick="counterr(this.id)" style="margin-bottom:10px; float:left;">
+          <input type="button" class="btn red" onclick="sendPost(this.form)" value="Отправить">
+      </form>
 
 
 
