--- a/app/templates/get_file.html
+++ b/app/templates/get_file.html
@@ -8,7 +8,7 @@
     <p style="color:{{g.status[status][1]}}"><span style="font-family:'Panton-Bold'; font-size:15px; color:#000000">Статус</span> - {{g.status[status][0]}}</p>
   </div>
   <div class="article-range" style="float:right;">
-    <p>Рейтинг - <span style="font-size:30px; font-family:'Panton-Bold;'">10<span></p>
+    <p>Рейтинг - <span style="font-size:30px; font-family:'Panton-Bold;'">{{rating_average}}<span></p>
   </div>
     <div class="article-read">
       <p><img src="/static/filestorage/{{filename}}" alt="{{filename}}"></p> 
