--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -14,28 +14,29 @@
         <li>Решение об отправлении статьи в печать выносится Комиссией на основании оценки пользователей и собственного анализа</li>
         <li>Здесь будет еще одно правило. Дополнительное</li>
         <li>Здесь будет правило номер три. Каким оно будет - пока непонятно</li>
+        <li>Запорченный файлы статей будут удаляться</li>
     </ul>
   </div>
 
   <div class="form">
     <h2>Вы можете отправить нам уже готовую статью</h2>
-     <form action="/create.html" method="POST" enctype="multipart/form-data">
-        {{Sendform.hidden_tag()}}
+     <form action="{{ url_for('create') }}" method="POST" enctype="multipart/form-data" name="contact">
+        {{form.hidden_tag()}}
        <p>Введите ваше Имя:</p>
        <!--no need class "send form here" -->
-       {{Sendform.author_name(class="send-form")}}
-        {% for error in Sendform.errors.author_name %}
-        <span style="color:red;" class="flash-error">{{error}}</span>
+       {{form.author_name(class="send-form")}}
+        {% for error in form.errors.author_name %}
+        <span style="color:red"; class="flash-message">{{error}}</span>
         {% endfor %}
        <p>Введите название статьи:</p>
-       {{ Sendform.article_name(class="send-form")}}
-        {% for error in Sendform.errors.article_name %}
-        <span style="color:red" class="flash-error">{{error}}</span>
+       {{ form.article_name(class="send-form")}}
+        {% for error in form.errors.article_name %}
+        <span style="color:red" class="flash-message">{{error}}</span>
         {% endfor %}
        <p>Введите ваш электронный адрес:</p>
-       {{ Sendform.email(class="send-form") }}
-        {% for error in Sendform.errors.email %}
-        <span style="color:red" class="flash-error">{{error}}</span>
+       {{ form.email(class="send-form") }}
+        {% for error in form.errors.email %}
+        <span style="color:red" class="flash-message">{{error}}</span>
         {% endfor %}
        <!--Add cleaning form after send article to database -->
       <!--<p>Set you name:<br><input type="text" name="author_name"></p>
@@ -43,24 +44,24 @@
        <p>Set email:<br><input type="text" name="email"></p> -->
       <!--<div class="file_upload"><p>Выбрать файл<input type="file" name="userfile"></p> </div>
        <p><input type="submit" value="Add file" class="btn red"></p> -->
-       <input type="file" id="upload" name="userfile"/>
-       <label for='upload' class="btn yellow">Открыть статью</label>
-      <input type="submit" value="Отправить статью" class="btn red">
+       <input type="file" id="upload" name="userfile" class="upload"/>
+       <label for='upload' class="btn yellow"><span>Открыть статью</span></label>
+      <input type="button" value="Отправить статью" class="btn red" onclick="submitForm(this);">
        </form>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
-            <ul>
+            <ul class="flash-message">
                 {% for message in messages %}
-                <li>{{ message }}</li>
+                <li><span style="color:{{message[0]}}">{{ message[1] }}</span></li>
                 {% endfor %}
             </ul>
              {% endif %}
              {% endwith %}
   </div>
   </div>
+   <h3 style="text-align:center">Или вы можете воспользоваться формой ниже, чтобы создать свою статью</h3>
 <div class="create-block">
-    <h3 style="text-align:center">Или вы можете воспользоваться формой ниже, чтобы создать свою статью</h3>
 <!--  <iframe frameborder="0" src="http://mega-photoshop.ru/fotoshop_onlajn.html" height="950px" width="100%" ></iframe><br/> -->
-  </div>
+</div>
 
 {% endblock %}
