--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel='stylesheet' type='text/css' href="{{ url_for('static', filename='css/fonts.css') }}">
   <link rel="stylesheet" type='text/css' href="{{ url_for('static', filename='css/styles.css') }}">
+  <link rel="stylesheet" type='text/css' href="{{ url_for('static', filename='css/buttons.css') }}">
   <link rel="stylesheet" type='text/css' href="{{ url_for('static', filename='css/forms.css') }}">
   <link rel="stylesheet" type='text/css' href="{{ url_for('static', filename='css/tablestyle.css') }}">
   <link rel="stylesheet" type='text/css' href="{{ url_for('static', filename='css/add_file_button.css') }}">
@@ -75,6 +76,8 @@
 <script src="{{ url_for('static', filename='javascript/jquery-1.7.1.min.js') }}"></script>
 <script src="{{ url_for('static', filename='javascript/autoadvance.js') }}"></script>
 <script src="{{ url_for('static', filename='javascript/changescript.js') }}"></script>
+<script src="{{ url_for('static', filename='javascript/custom-file-input.js') }}"></script>
+<script src="{{ url_for('static', filename='javascript/jquery.custom-file-input.js') }}"></script>
 </body
 </html>
 
