--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,14 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="login">
-      <form action="login" method="post">
-          <p>Login:</p>
-        <input type="text" name="login">
-          <p>Password:</p>
-        <input type="password" name="password">
-        <input type="submit" value="Send" class="btn red">
-      </form>
-    </div>
+    <div class="form" style="float:left;">
+        <form action="{{ url_for('login') }}" method="POST" enctype="multipart/form-data" name="login">
+        {{form.hidden_tag()}}
+       <p>Введите логин:</p>
+       <!--no need class "send form here" -->
+       {{form.login(class="send-form")}}
+        {% for error in form.errors.author_name %}
+        <span style="color:red"; class="flash-message">{{error}}</span>
+        {% endfor %}
+       <p>Введите пароль:</p>
+       {{ form.password(class="send-form")}}
+        {% for error in form.errors.article_name %}
+        <span style="color:red" class="flash-message">{{error}}</span>
+        {% endfor %}
+       <p><input type="checkbox" name="remember_me" value="a1" checked>Запомнить меня</p>
+      <input type="submit" value="Отправить" class="btn red" style="float:left;">
+        </form>
+   </div>
+    
     {% with messages = get_flashed_messages() %}
     {% if messages %}
       <div class="alert">
